opam-version: "2.0"
name: "lua-ml"
version: "0.9.2"
synopsis: "An embeddable Lua 2.5 interpreter implemented in OCaml"
maintainer: "Daniil Baturin <daniil+opam@baturin.org>"
authors: [
  "Norman Ramsey <nr@cs.tufts.edu>"
  "Christian Lindig <lindig@gmail.com>"
]
license: "Two-clause BSD"
homepage: "https://github.com/lindig/lua-ml"
bug-reports: "https://github.com/lindig/lua-ml/issues"
dev-repo: "git+https://github.com/lindig/lua-ml.git"
depends: [
  "ocaml" {>= "4.07"}
  "ocamlbuild"
  "ocamlfind"
]
build:
  [ make "lib" ]
