(ocamllex luafloat luascanner)

(rule
 (targets luaparser_impl.ml)
 (deps
  (:parser luaparser_impl.mly))
 (action
   (progn

  (chdir
   %{workspace_root}
   (run %{bin:ocamlyacc} %{parser})))))

(rule
  (targets luaparser.ml)
  (deps luaparser_impl.ml)
  (action
    (copy luaparser_impl.ml luaparser.ml)))

(library
 (name lua)
 (libraries unix)
 ; sadness
 (wrapped false)
 ; have to specify exclude luaparser_impl since that will be copied
 (modules (:standard \ luaparser_impl))
 (public_name lua-ml))
