(ocamllex luafloat luascanner)

(menhir
  (modules luaparser_tokens)
  (flags --only-tokens))

(menhir
  (modules luaparser_tokens luaparser_impl)
  (merge_into luaparser_impl)
  (flags --external-tokens Luaparser_tokens))

(library
 (name lua)
 (libraries unix)
 ; sadness
 (wrapped false)
 (public_name lua-ml))
